# habr-project-inn

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/inn_service/: app_container.py  logger.py  main.py  settings.py
src/inn_service/clients/: inn_nalog_client.py  utils.py
src/inn_service/connection_managers/: mongo_connection_manager.py  rabbitmq_connection_manager.py
src/inn_service/core/: application.py  container_manager.py  event_mixins.py  exceptions.py
src/inn_service/infrastructure/controllers/: base_controller.py  liveprobe_controller.py
src/inn_service/infrastructure/handlers/: base_handler.py  request_handler.py
src/inn_service/infrastructure/http_server/: http_server_manager.py
src/inn_service/infrastructure/queue_manager/: queue_manager.py
src/inn_service/infrastructure/queues/: queue_manager.py
src/inn_service/models/: model.py
src/inn_service/repositories/: base_mongo_repository.py  request_mongo_repository.py
src/inn_service/serializers/: nalog_api_serializer.py  request_serializer.py
src/inn_service/services/: inn_service.py  live_probe_service.py
